# testy_rishat

./: .gitignore  Dockerfile  README.md  create_config.sh  docker-compose.yaml  pyproject.toml  render.sh  requirements.txt  run.sh  start.sh
stripy/: Dockerfile  manage.py  requirements.txt
stripy/custom_auth/: admin.py  context_processors.py  forms.py  models.py  views.py
stripy/custom_auth/static/js/: account_settings.js
stripy/custom_auth/templates/: account_settings.html
stripy/custom_auth/templates/account/: login.html
stripy/products/: admin.py  models.py  urls.py  views.py
stripy/products/management/commands/: add_stripe_webhook.py  initial_database_fill.py
stripy/products/static/js/: add_to_cart.js  buy_checkout.js  checkout.js
stripy/products/templates/: base.html  navbar.html
stripy/products/templates/products/: cancel.html  cart.html  cart_component.html  checkout.html  item_detail.html  item_list.html  order_list.html  success.html
stripy/products/templatetags/: divide_tag.py
stripy/stripy/: asgi.py  settings.py  wsgi.py
